ISSUE-#98 Rework slide entries positioning, fix slide view bottom gap

--- a/src/components/SlidePanel/SlideView/SlideView.module.css
+++ b/src/components/SlidePanel/SlideView/SlideView.module.css
@@ -1,5 +1,7 @@
 .slideView
 {
+  display: block;
+
   width: 100%;
   height: 100%;
 
